# agentic-ai-trading-be

./: .gitignore  LICENSE  Makefile  README.md  aws_infrastructure.dot  aws_infrastructure.py  docker-compose.yml  kong.yml  report.html  requirements.txt
info-agent-service/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
info-agent-service/app/: main.py
info-agent-service/app/core/: config.py
info-agent-service/app/routers/: query.py
info-agent-service/app/schemas/: chat.py
info-agent-service/app/scripts/: ingest_data.py
info-agent-service/app/services/: info_agent.py
info-agent-service/knowledge/: 01_overview.md  02_architecture.md  03_features.md  04_faq.md  05_trading_strategy.md
info-agent-service/tests/: conftest.py  test_info_agent_service.py  test_main.py  test_query_router.py
qdrant-retrieval/: .dockerignore  .env.test  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  report.html  requirements.txt
qdrant-retrieval/app/: main.py
qdrant-retrieval/app/core/: config.py  constant.py  logger.py
qdrant-retrieval/app/data/: __init__.py  mock_qdrant_payload.py  mock_reddit_payload.py  mock_tradingview_payload.py
qdrant-retrieval/app/routers/: query_docs.py  vectorise_docs.py
qdrant-retrieval/app/schemas/: compiled_news_payload.py  query_docs_payload.py  raw_news_payload.py
qdrant-retrieval/app/scripts/: postgres.py  storage.py  test_vectorisation.py
qdrant-retrieval/app/services/: qdrant_vectorisation_worker.py  query_qdrant.py  vectorisation.py
qdrant-retrieval/app/tests/: conftest.py  test_health.py  test_latest_news.py  test_pipeline_integration.py  test_query_qdrant_service.py  test_router_latest_news.py  test_router_news.py  test_router_query_docs.py  test_storage.py  test_vectorisation_service.py  test_vectorisation_worker.py
rag-chatbot/: .env.sample  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  report.html  requirements.txt
rag-chatbot/app/: main.py
rag-chatbot/app/core/: config.py  constant.py  db.py  logger.py  prompts.py  s3_config.py  security.py  vector_store.py
rag-chatbot/app/routers/: agent_bot.py  bot.py  chat.py  ingestion.py  retrieval.py  threads.py
rag-chatbot/app/schemas/: chat.py  ingestion.py  order_details.py  router_decision.py
rag-chatbot/app/services/: agent_bot_service.py  bot.py  bot_memory.py  ingestion_service.py  redis_service.py  retrieval_service.py
rag-chatbot/app/tests/: test_core_services.py  (+2 more)
rag-chatbot/eval/: eval_tool_calls.py
rag-chatbot/scripts/: seed_dataset.py
rag-chatbot/tests/: conftest.py  test_agent.py  test_agent_bot_service.py  test_bot_memory.py  test_clarification.py  test_core_services.py  test_default_range.py  test_general_news.py  test_history.py  test_history_persistence.py  test_llm_providers.py  test_news_node_logic.py  test_ordinal_resolution.py  test_redis_service.py  test_summarization.py  test_threads_router.py  test_tools.py  test_trade_history.py  test_trade_history_improvement.py  test_trade_history_list.py
(+644 files in other folders)
