[project]
name = "rag-chatbot"
version = "0.1.0"
description = "Production-grade RAG chatbot for internal document retrieval via LangGraph and AWS"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.42.58",
    "fastapi>=0.133.1",
    "google-genai>=1.65.0",
    "langchain>=1.2.10",
    "langgraph>=1.0.9",
    "psycopg[pool]>=3.3.3",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.1",
    "redisvl>=0.14.1",
    "uvicorn[standard]>=0.41.0",
]
