[project]
name = "rag-chatbot"
version = "0.1.0"
description = "Production-grade RAG chatbot for internal document retrieval via LangGraph and AWS"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.42.58",
    "fastapi[standard]>=0.133.1",
    "google-genai>=1.65.0",
    "langchain>=1.2.10",
    "langchain-google-genai>=4.2.1",
    "langchain-groq>=1.1.2",
    "langchain-nvidia-ai-endpoints>=1.2.1",
    "langchain-ollama>=1.0.1",
    "langgraph>=1.0.9",
    "langgraph-checkpoint-postgres>=3.0.5",
    "psycopg[binary,pool]>=3.3.3",
    "PyJWT>=2.10.1",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.1",
    "redisvl>=0.14.1",
    "rich>=14.3.3",
    "uvicorn[standard]>=0.41.0",
    "prometheus-fastapi-instrumentator>=7.0.0",
]

[dependency-groups]
dev = [
    "pytest-asyncio>=1.3.0",
    "pytest-html>=4.2.0",
    "ruff>=0.15.6",
]
